--- a/settings.gradle
+++ b/settings.gradle
@@ -4,12 +4,18 @@ pluginManagement {
         google()
         mavenCentral()
     }
+    repositories {
+        jcenter()
+    }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
+    }
+    repositories {
+        jcenter()
     }
 }
 rootProject.name = "Medication Reminder"
