--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -37,6 +38,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.8.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     testImplementation 'junit:junit:4.13.2'
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.2.0'
 
@@ -50,5 +52,22 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.4.1"
 //Gson
     implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
+    implementation platform('com.google.firebase:firebase-bom:29.1.0')
+
+
+
+
+
+    implementation 'com.google.firebase:firebase-analytics'
+
+    implementation platform('com.google.firebase:firebase-bom:29.1.0')
+
+    implementation 'com.google.firebase:firebase-database'
+
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.8.1'
+    testImplementation 'junit:junit:4.13.2'
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.2.0'
 }
