--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,9 +65,14 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
 
     implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.android.material:material:1.5.0'
 
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.8.1'
     testImplementation 'junit:junit:4.13.2'
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.2.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.5.0'
 }
