--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
+    implementation   'com.github.clans:fab:1.6.4'
+
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
 
 
