--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    //Navigation
+//Navigation
     implementation "androidx.navigation:navigation-fragment:2.4.1"
     implementation "androidx.navigation:navigation-ui:2.4.1"
 //Room
@@ -55,13 +55,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
-
-
-
-
-
     implementation 'com.google.firebase:firebase-analytics'
-
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
 
     implementation 'com.google.firebase:firebase-database'
@@ -70,4 +64,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.8.1'
     testImplementation 'junit:junit:4.13.2'
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.2.0'
+ //circuler image
+   implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //lotti
+    implementation 'com.airbnb.android:lottie:3.4.0'
 }
