edit login and register

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,24 +10,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MedicationReminder">
         <activity
+            android:name=".Splash"
+            android:exported="false" />
+        <activity
             android:name=".login.restPassword.r.RestPassword"
             android:exported="false" />
         <activity
             android:name=".login.view.LoginActivity"
             android:exported="true">
-
-        </activity>
-        <activity
-            android:name=".register.view.RegisterActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".register.view.RegisterActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
