--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.8.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+    implementation 'com.android.volley:volley:1.2.0'
     testImplementation 'junit:junit:4.13.2'
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.2.0'
 
@@ -54,12 +55,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
-    implementation   'com.github.clans:fab:1.6.4'
+    implementation 'com.github.clans:fab:1.6.4'
 
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
-
-
-
 
 
     implementation 'com.google.firebase:firebase-analytics'
@@ -72,8 +70,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.8.1'
     testImplementation 'junit:junit:4.13.2'
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.2.0'
- //circuler image
-   implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //circuler image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     //lotti
     implementation 'com.airbnb.android:lottie:3.4.0'
+    implementation 'com.firebaseui:firebase-ui-database:6.2.0'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
