--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.8.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'com.android.volley:volley:1.2.0'
+    implementation 'com.google.firebase:firebase-firestore:24.0.1'
     testImplementation 'junit:junit:4.13.2'
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.2.0'
 
@@ -75,7 +76,16 @@ dependencies {
     //lotti
     implementation 'com.airbnb.android:lottie:3.4.0'
     implementation 'com.firebaseui:firebase-ui-database:6.2.0'
+    implementation 'com.google.firebase:firebase-database'
+
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
+    //work manger
+    def work_version = "2.7.1"
+    implementation "androidx.work:work-runtime:$work_version"
+    def core_version = "1.6.0"
+
+        implementation "androidx.core:core:$core_version"
 }
