--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //lotti
     implementation 'com.airbnb.android:lottie:3.4.0'
+    //workManger
+    implementation "androidx.work:work-runtime:2.7.1"
+    //Notification
+    implementation "androidx.core:core:1.7.0"
     implementation 'com.firebaseui:firebase-ui-database:6.2.0'
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
